# budgie-global-menubar-applet

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  disable.sh  enable.sh  launch.sh  notes.md
src/: main.c  win-query.c  win-query.h
